# evolve

./: .gitignore  Cargo.toml  README.md  TDD.md  evolve.config.json  mock-theme.css  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
design/: 1-prd.md  2-architecture.md  3-techlead-review.md  4-implementation-plan.md  5-review.md
docs/: schema.md  user-stories.md
docs/learnings/: 2026-06-20-gitignored-config-as-bundled-resource.md  2026-06-23-rls-security-model.md
src/: cli.ts  hash.rs  install.rs  lib.rs  main.rs  model.rs  render.rs  types.ts  util.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  config.rs  lib.rs  provenance.rs  registry.rs  session_store.rs
src/claude/: adapter.ts  discovery.rs  discovery.ts  mod.rs  parsers.rs
src/claude/parsers/: memory.ts  rule.ts  skill.ts
src/render/: list.ts
src/store/: db.ts
src/sync/: sync.ts
supabase/: SETUP.md  schema.sql
test/: sync.test.ts
test/fixtures/dot-claude/: CLAUDE.md
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  dataSource.ts  demo.ts  styles.css  types.ts
web/src/components/: AuthButton.tsx  BuildView.tsx  DiscoverView.tsx  EmptyState.tsx  Filters.tsx  ItemRow.tsx  KindDot.tsx  KindSection.tsx  KindTile.tsx  Markdown.tsx  MergeView.tsx  PageHeader.tsx  PeopleView.tsx  ProjectList.tsx  PublishButton.tsx  SideNav.tsx  SignInScreen.tsx  Tabs.tsx  Topbar.tsx
web/src/hooks/: publishContext.ts  useAuth.ts  useDiscover.ts  useProvenance.ts  usePublications.ts  (+1 more)
(+9 files in other folders)
