[package]
name = "app"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
evolve = { path = ".." }   # our scanner library — the desktop app's engine
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["net", "io-util", "process"] }   # async loopback listener + claude -p
base64 = "0.22"          # PKCE verifier/challenge encoding (base64url)
getrandom = "0.2"        # CSPRNG for the PKCE verifier
urlencoding = "2"        # encode the redirect_to param / decode redirect query
open = "5"               # open the system browser for Google sign-in
dirs = "5"               # locate the app-data dir for the persisted session file

# Auto-update is desktop-only; the updater plugin pulls signed releases from GitHub.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
